Fixed can send 0 ships bug. Preview ship path doesn't disappear. Attackers always win ship combat and just end up with negative ships.

--- a/views/index.html
+++ b/views/index.html
@@ -260,7 +260,7 @@
                         }
                     }
                 }
-                if(destinationStarName != "") {
+                if(destinationStarName != "" && numberOfShips > 0) {
                     transmitShipOrders(originStarName, x, y, destinationStarName, numberOfShips, owner);
                 }
                 canvas.onclick = null;
